# DOK.Arealanalyse.Demonstrator

./: .env  .gitignore  README.md  catalog-info.yaml  docker-compose.yml
client/api/: .dockerignore  .gitignore  Dockerfile  Dok.Arealanalyse.Api.sln  main.py  pyproject.toml
client/api/Dok.Arealanalyse.Api.Application/: Dok.Arealanalyse.Api.Application.csproj
client/api/Dok.Arealanalyse.Api.Application/Models/Settings/: DatafunnSettings.cs
client/api/Dok.Arealanalyse.Api.Application/Services/: DokThemesHttpClient.cs  IDokThemesHttpClient.cs  PygeoapiService.cs
client/api/Dok.Arealanalyse.Api.Mcp/: Dockerfile  Program.cs  Tools.cs  appsettings.Development.json  appsettings.json
client/api/Dok.Arealanalyse.Api.Mcp/Clients/: DokApiClient.cs  PlanDataClient.cs  TeigWfsClient.cs
client/api/Dok.Arealanalyse.Api.Mcp/Properties/: launchSettings.json
client/api/Dok.Arealanalyse.Api.Web/: Dok.Arealanalyse.Api.Web.csproj  Program.cs  appsettings.json
client/api/Dok.Arealanalyse.Api.Web/Controllers/: BaseController.cs  ConfigController.cs  ConvertController.cs  DokThemesController.cs  PygeoapiController.cs  SampleController.cs  ValidateController.cs
client/api/samples/: drammen.geojson  his-alle.geojson  roeros.geojson  skien-havneterminal.geojson
client/api/services/: __init__.py  area.py  common.py  dok_tema.py  dok_themes.py  eiendom.py  eksempler.py  exceptions.py  kommuner.py  omrade.py  pygeoapi.py  reguleringsplaner.py  samples.py  wfs_request.xml.txt
client/api/src/dokanalyse-web-api/: main.py
client/api/src/dokanalyse-web-api/routers/: dok_tema.py  (+9 more)
(+273 files in other folders)
